<resources>
    <string name="app_name">Movie King</string>
    <string name="sign_up">Register an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo_Image">logo image</string>
    <string name="movie_king">Movie King</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="rating">\"Rating: \"</string>
    <string name="searchHint">Movies and More</string>
</resources>